# Taller-SQL-Basico-Intermedio

./: .gitignore  INSTALACION.md  README.md  generar_data.py  pyproject.toml  run.sh  taller.md
